testsuite/tests/typing-private-bugs/pr5026_bad.compilers.reference
File "pr5026_bad.ml", line 11, characters 0-36:
11 | type -'typing wrapped = private sexp
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The definition of wrapped contains a cycle:
       sexp
